Fix creating slots with rrules (#28)
Also fix couple minor bugs and improvements